# ocd

./: .actrc  .gitignore  .gitleaks.toml  .hadolint.yaml  .htmlhintrc  .mcp.example.json  .mcp.json  .mdformat.toml  .semgrep.yml  .sqlfluff  .trivyignore  .typos.toml  .yamllint  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  index.md  ocd.code-workspace  package-lock.json  package.json  pyproject.toml  trivy.yaml
.agent/: .gitignore
.claude/: pyproject.toml  settings.json  settings.local.json
.claude/agents/: accessibility-auditor.md  api-contract-auditor.md  ci-drift.md  complexity-reducer.md  dead-code-hunter.md  dependency-auditor.md  deps-upgrader.md  dockerfile-auditor.md  docstring-enforcer.md  dry-enforcer.md  exception-auditor.md  hook-coverage.md  hook-integrity.md  kb-health-checker.md  kiss-auditor.md  lint-status.md  oop-auditor.md  owasp-scanner.md  perf-opportunist.md  readability-scorer.md  single-source-auditor.md  solid-auditor.md  test-coverage-auditor.md  test-writer.md  yagni-auditor.md
.claude/hooks/: commit-msg  hookslib.py  lint-work.py  pre-commit  pre-compact.py  session-end.py  session-start.py
.claude/rules/: commit-hygiene.md  doc-sync.md  export.md  infrastructure.md  markdown.md  org-defaults.md  pr-workflow.md  worktrees.md
.claude/scripts/: ai-patterns.txt  compile.py  config.py  flush.py  lint.py  query.py  setup-hooks.sh  utils.py
.claude/skills/bash/: SKILL.md
.claude/skills/cpp/: SKILL.md
.claude/skills/csharp/: SKILL.md
.claude/skills/css/: SKILL.md
.claude/skills/docker/: SKILL.md
.claude/skills/git/: SKILL.md
.claude/skills/github/: SKILL.md
.claude/skills/go/: SKILL.md
.claude/skills/html/: SKILL.md
.claude/skills/java/: SKILL.md
.claude/skills/js/: SKILL.md
.claude/skills/json/: SKILL.md
.claude/skills/kubernetes/: SKILL.md
.claude/skills/markdown/: SKILL.md
.claude/skills/ocd/: SKILL.md  standards.md
.claude/skills/php/: SKILL.md
.claude/skills/python/: SKILL.md
.claude/skills/ruby/: SKILL.md
.claude/skills/rust/: SKILL.md
.claude/skills/sql/: SKILL.md
.claude/skills/swift/: SKILL.md
.claude/skills/terraform/: SKILL.md
.claude/skills/typescript/: SKILL.md
.claude/skills/yaml/: SKILL.md
.claude/tests/: conftest.py  test_config.py  test_flush.py  test_hookslib.py  test_lint_work.py  test_session_start.py  test_utils.py
.devcontainer/: devcontainer.json
.githooks/: pre-commit  pre-push  setup-hooks.sh
.github/: dependabot.yml
.github/workflows/: ci.yml  containers.yml  dependabot-auto-merge.yml  doc-quality.yml  publish.yml
USER/: .gitignore
containers/ocd/: .dockerignore  Dockerfile
containers/ocd-base/: .dockerignore  Dockerfile
containers/ocd-node/: Dockerfile
containers/ocd-ollama/: Dockerfile
containers/ocd-python/: Dockerfile
docs/: 01-getting-started.md  02-how-to.md  03-reference.md  04-explanation.md  05-planning.md  06-usage.md  07-development.md  08-code-workspace.md  09-containers.md  architecture.md  index.md  planning.md
docs/explanation/: README.md  org-defaults.md
docs/how-to/: README.md  ai-usage.md  development.md
docs/project/: 01-getting-started.md  02-how-to.md  03-reference.md  04-explanation.md  05-planning.md  06-usage.md  07-development.md  08-code-workspace.md  09-containers.md
docs/reference/: README.md  code-workspace.md  containers.md
docs/reference/agents/: accessibility-auditor.md  api-contract-auditor.md  dockerfile-auditor.md  owasp-scanner.md
docs/reference/skills/: bash.md  cpp.md  csharp.md  css.md  docker.md  git.md  github.md  go.md  html.md  java.md  js.md  json.md  kubernetes.md  php.md  python.md  ruby.md  rust.md  sql.md  swift.md  terraform.md  typescript.md  yaml.md
docs/tutorials/: getting-started.md
git_hooks/: commit-msg  pre-commit  pre-push  setup-hooks.sh
src/mdformat_frontmatter_preserve/: __init__.py
src/ocd/: __init__.py  autofix.py  check.py  ci_check.py  cli.py  compile.py  config.py  fix.py  flush.py  format.py  ingest.py  lint.py  materialize.py  mcp_server.py  pack.py  precedents.py  query.py  relevance.py  router.py  rules.py  session_card.py  standards.py  standards_data.py  utils.py  vec.py  vendors.py  verify_commit.py  worktree.py
src/ocd/content/agents/: complexity-reducer.md  dead-code-hunter.md  deps-upgrader.md  hook-integrity.md  kb-health-checker.md  kiss-auditor.md  lint-status.md  readability-scorer.md  single-source-auditor.md
src/ocd/data/: __init__.py
src/ocd/fix/: __init__.py  autofix.py  cycle.py  format.py
src/ocd/gates/: __init__.py  check.py  ci_check.py  pre_push.py  scan_secrets.py  verify_commit.py
src/ocd/hooks/: format_work.py  hookslib.py  lint_work.py  pre_compact.py  session_end.py  session_start.py
src/ocd/kb/: __init__.py  compile.py  export.py  ingest.py  lint.py  query.py  relevance.py  vec.py
src/ocd/packaging/: __init__.py  materialize.py  pack.py  vendors.py
src/ocd/routing/: __init__.py  router.py  standards.py
src/ocd/session/: __init__.py  app_spec.py  flush.py  session_card.py  vision.py
src/ocd/task_enforcer/: __init__.py  cross_repo.py  models.py  validation.py
src/ocd/tools/: __init__.py  runner.py
tests/: conftest.py  test_autofix.py  test_check.py  test_ci_check.py  test_cli.py  test_config.py  test_cross_repo.py  test_fix.py  test_flush.py  test_format.py  test_format_work.py  test_hookslib.py  test_ingest.py  test_lint_work.py  test_mcp_server.py  test_pre_push.py  test_relevance.py  test_router.py  test_runner.py  test_scan_secrets.py  test_session_card.py  test_session_start.py  test_standards.py  test_utils.py  test_vec.py  test_vendors.py  test_verify_commit.py  test_vision.py
tests/fix/: test_cycle.py
tests/gates/: test_check.py  test_ci_check.py  test_pre_push.py  test_verify_commit.py
tests/hooks/: test_session_start.py
tests/kb/: test_export.py  test_ingest.py  test_relevance.py  test_vec.py
tests/packaging/: test_materialize.py  test_vendors.py
tests/routing/: test_router.py
tests/session/: test_app_spec.py  test_flush.py
tests/worktree/: test_worktree.py
(+8 files in other folders)
