[project]
name = "brainxio-ocd"
version = "0.1.0"
description = "Obsessive Code Discipline — quality enforcement, knowledge pipeline, and agent augmentation for AI-assisted development"
license = "MIT"
requires-python = ">=3.12"
dependencies = [
    "claude-agent-sdk>=0.1.29",
    "mdformat>=0.7",
    "ruamel.yaml",
    "mdit-py-plugins>=0.4.0",
    "mypy>=1.13",
    "ruff>=0.8",
    "yamllint>=1.35",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.24"]
sql = ["sqlfluff>=3.0"]

[project.scripts]
ocd = "ocd.cli:main"
ocd-compile = "ocd.compile:main"
ocd-kb-query = "ocd.relevance:main"
ocd-route = "ocd.router:main"
ocd-standards = "ocd.standards:main"
ocd-fix-cycle = "ocd.fix:main"
ocd-flush = "ocd.flush:main"
ocd-format = "ocd.format:main"
ocd-query = "ocd.query:main"
ocd-lint-kb = "ocd.lint:main"
ocd-lint-work = "ocd.hooks.lint_work:main"
ocd-format-work = "ocd.hooks.format_work:main"
ocd-session-start = "ocd.hooks.session_start:main"
ocd-session-end = "ocd.hooks.session_end:main"
ocd-pre-compact = "ocd.hooks.pre_compact:main"
ocd-compile-db = "ocd.pack:main"
ocd-materialize = "ocd.materialize:main"
ocd-pre-push = "ocd.pre_push:main"
ocd-verify-commit = "ocd.verify_commit:main"
ocd-scan-secrets = "ocd.scan_secrets:main"
ocd-ci-check = "ocd.ci_check:main"

[project.entry-points."mdformat.parser_extension"]
frontmatter = "mdformat_frontmatter_preserve"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ocd", "src/mdformat_frontmatter_preserve"]

[tool.hatch.build.targets.wheel.force-include]
"src/ocd/data/content.db" = "ocd/data/content.db"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF"]

[tool.mypy]
strict = true
exclude = ["tests/"]

[[tool.mypy.overrides]]
module = ["tests.*"]
disable_error_code = ["no-untyped-def", "no-any-return", "unused-ignore", "import-untyped"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
]