[project]
name = "brainxio-ocd"
version = "0.1.0"
description = "Obsessive Code Discipline — quality enforcement, knowledge pipeline, and agent augmentation for AI-assisted development"
license = "MIT"
requires-python = ">=3.12"
dependencies = [
    "claude-agent-sdk>=0.1.29",
    "mdformat>=0.7",
    "ruamel.yaml",
    "mdit-py-plugins>=0.4.0",
    "mypy>=1.13",
    "ruff>=0.8",
    "yamllint>=1.35",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.24"]
sql = ["sqlfluff>=3.0"]
vec = ["sqlite-vec>=0.1.6", "fastembed>=0.4.0"]

[project.scripts]
# Single entry point — all commands under `ocd <subcommand>`, including hooks via `ocd hook <name>`
ocd = "ocd.cli:main"

[project.entry-points."mdformat.parser_extension"]
frontmatter = "mdformat_frontmatter_preserve"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ocd", "src/mdformat_frontmatter_preserve"]

[tool.hatch.build.targets.wheel.force-include]
"src/ocd/data/content.db" = "ocd/data/content.db"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF"]

[tool.mypy]
strict = true
exclude = ["tests/"]

[[tool.mypy.overrides]]
module = ["tests.*"]
disable_error_code = ["no-untyped-def", "no-any-return", "unused-ignore", "import-untyped"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
]