[project]
name = "obsessive-claude-developer"
version = "0.1.0"
description = "O.C.D. environment with a personal knowledge base compiled from AI conversations - inspired by Karpathy's LLM KB architecture"
requires-python = ">=3.12"
dependencies = [
    "claude-agent-sdk>=0.1.29",
    "mdformat>=0.7",
    "mdformat-frontmatter>=2.0.10",
    "mypy>=1.13",
    "ruff>=0.8",
    "yamllint>=1.35",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.24"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["scripts", "hooks"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF"]

[tool.mypy]
strict = true
exclude = ["tests/"]

[[tool.mypy.overrides]]
module = ["config", "hookslib", "utils", "flush", "lint_work", "session_start"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["tests.*"]
disable_error_code = ["no-untyped-def", "no-any-return", "unused-ignore"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
]
